# CPP-Dynamic-Class-Loading

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md
include/: dlclass.cpp  dlclass.h  dlclass.hpp  foo.h  polygon.h  polygon.hpp
include/dlclass/: load_plugin.h  slfcn.h
pkg/: dlclass_install.cmake
src/: foo_impl.cpp  square.cpp  triangle.cpp
test/: CMakeLists.txt  dlclass_test.cpp
test/include/: example.h
test/include/dlclass/test/: example.h
test/src/: example.cpp  test.cpp
test/src/dlclass/: test.cpp
test/src/dlclass/test/: example.cpp
